# BlackMagic

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
algos/: README.md
algos/concurrent/: parallel_merge_sort.bm
algos/docs/: BENCHMARKS.md
algos/numeric/: fft.bm
algos/sorting/: introsort.bm  radix_sort.bm
algos/strings/: suffix_array.bm
algos/trees/: art.bm
engine/: engine.bm
engine/ai/: attention.bm  kvcache.bm  model.bm  ops.bm  sampler.bm  scheduler.bm  sglang.bm  tensor.bm  tokenizer.bm  vllm.bm
engine/algo/: flow.bm  geom.bm  graph.bm  noise.bm  pathfind.bm  sort.bm  spatial.bm
engine/audio/: server.bm
engine/city/: hud.bm  main.bm  map.bm  player.bm  theme.bm
engine/core/: math.bm  resource.bm  signal.bm
engine/input/: event.bm
engine/physics/: world2d.bm
engine/platform/: apex.bm  web.bm
engine/renderer/: canvas.bm  raycast.bm
engine/scene/: node.bm  node2d.bm  scene_tree.bm
examples/: 01_hello.bm  02_ownership.bm  03_comptime.bm  04_effects.bm  05_modules.bm  06_simd_performance.bm  07_benchmark_vs_world.bm
spec/: BLACKMAGIC_SPEC.md
src/: ast.bm  ast.rs  borrow.bm  borrow.rs  comptime.bm  comptime.rs  diag.bm  diag.rs  effects.bm  effects.rs  error.bm  error.rs  lexer.bm  lexer.rs  lib.bm  main.bm  mir.bm  mir.rs  module.bm  module.rs  opt.bm  opt.rs  parser.bm  parser.rs  typecheck.bm  typecheck.rs  types.bm  types.rs
src/codegen/: c.bm  c.rs  llvm.bm  llvm.rs  mod.bm  wasm.bm  wasm.rs
stdlib/juicer/: mod.bm
tests/: lexer_tests.bm  lexer_tests.rs  parser_tests.bm  parser_tests.rs
(+1 files in other folders)
