[package]
name = "blackmagic"
version = "0.1.0"
edition = "2021"
authors = ["Abe"]
description = "The BlackMagic Language Compiler — universal product maker"
license = "UNLICENSED"

[[bin]]
name = "bmc"
path = "src/main.bm"

[lib]
name = "blackmagic"
path = "src/lib.bm"

[dependencies]

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
